# nime25

./: .gitignore  Gemfile  LICENSE.txt  README.md  _config.yml  _config_archive.yml  academic-org-theme.gemspec  accessibility.md  call.md  camera-ready.md  committee.md  contact.md  index.md  location.md  program-by-session.md  program-by-track.md  program-list.md  program.md  registration.md  review.md  reviewing.md  sponsorship.md  submissions.md  update_proceedings.sh
_data/: committee.yml  proceedings.csv  proceedings_test.csv  proceedings_with_problems.csv  sessions.yml
_drafts/: call_email.md  cmt_required_note.md
_includes/: footer.html  head.html  nav.html  scripts.html  tocdiv.html
_layouts/: default.html  page.html  post.html  proceeding_entry.html  session_entry.html
assets/: styles.scss  timezones.json
gs_to_web/: gs_to_web.py  pyproject.toml
