[project]
name = "gs-to-web"
version = "0.1.0"
description = ""
authors = [
    {name = "Charles Martin",email = "charles.martin@anu.edu.au"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
